<resources>
    <string name="app_name">MyTicket</string>
    <string name="slogan">Wisata Jadi Lebih Asyik</string>
    <string name="slogan_getstarted">Discover \nThe Beauty \nOf Earth</string>
    <string name="signin_text">Sign In</string>
    <string name="new_account_text">New Account</string>

    <!--register-->
    <string name="title_register">Create New Account</string>
    <string name="description_register">Please fill up the forms below \nfor informations</string>
    <string name="continue_label">Continue</string>
    <string name="title_selfie">Selfie Time</string>
    <string name="title_create">Create</string>
    <string name="description_selfie">Let the world knows yourself \nmore better and ever</string>
    <string name="title_explore">Explore Now</string>
    <string name="title_success_register">Kamu Hebat</string>
    <string name="desc_success_register">Selamat datang pada MyTicket \ndan nikmati wisatamu</string>

    <!--home-->
    <string name="title_home">My Dashboard</string>
    <string name="title_main_menu">Main Menu</string>
    <string name="desc_main_menu">Explore the beauty of world</string>
    <string name="title_tips">Ticket Tips</string>
    <string name="desc_tips">Learn it for many benefits</string>

    <!--menu-->
    <string name="pisa_menu">Pisa</string>
    <string name="torri_menu">Torri</string>
    <string name="pagoda_menu">Pagoda</string>
    <string name="candi_menu">Candi</string>
    <string name="sphinx_menu">Sphinx</string>
    <string name="monas_menu">Monas</string>

    <!--detail ticket-->
    <string name="title_detail">Information</string>
    <string name="desc_title">Knowing before travel</string>

    <!--checkout ticket-->
    <string name="title_checkout">Buy Ticket</string>
    <string name="title_sub_checkout">Ticket Details</string>
    <string name="desc_sub_checkout">Check the amount of tickets</string>
    <string name="label_balance">Balance</string>
    <string name="desc_balance">Your current balance is </string>
    <string name="label_grand_price">Total Price</string>
    <string name="label_pay_now">Pay Now</string>

    <!--success buy-->
    <string name="title_success_buy">Selamat Menikmati</string>
    <string name="desc_success_buy">Anda berhasil membeli tiket \ndan selamat berlibur</string>
    <string name="title_btn_view">View Tickets</string>
    <string name="title_dashboard">My Dashboard</string>

    <!--My Detail Ticket-->
    <string name="title_detail_ticket">Ticket Details</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_information">Information</string>
    <string name="label_refund">Refund Now</string>

    <!--Edit Profile-->
    <string name="title_profile_edit_">Edit Profile</string>
    <string name="desc_edit_profile">We highly suggest you to \nuse the correct information.</string>
    <string name="label_update_profile">Save Profile</string>
    
    <!--benefits label-->
    <string name="title_benefit_spot">4 Photo Spots</string>
    <string name="desc_benefit_spot">Tripod everywhere</string>
    <string name="title_benefit_wifi">WiFi Available</string>
    <string name="desc_benefit_wifi">Connect for any tourist</string>
    <string name="title_benefit_festival">13 Festivals</string>
    <string name="desc_benefit_festival">Dance and Foods</string>
    <string name="desc_detail">The leaning of the Tower of Pisa \ncomes into the story in 1173, when \nconstruction began.</string>
    <string name="title_buy_ticket">Buy Ticket</string>

    <!--labels-->
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Full Name</string>
    <string name="hobby_label">Your Hobby</string>

    <!--profile-->
    <string name="title__ticket_profile">My Tickets</string>
    <string name="desc_ticket_profile">Explore the beauty of world</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_signout_profile">Sign Out</string>

</resources>
